more improved version

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,16 @@
 OLLAMA_HOST=http://localhost:11434
 OLLAMA_MODEL=devstral:24b
 
+# --- FastPath (Reflex) Configuration ---
+# Set FAST_PATH_ENABLED=false to force use of the main OLLAMA_MODEL for all turns (Save VRAM).
+FAST_PATH_ENABLED=true
+FAST_PATH_MODEL=llama3.2:3b
+FAST_PATH_HOST=http://localhost:11434
+USE_PROXY=false
+HTTP_PROXY=http://user:password@host:port
+HTTPS_PROXY=http://user:password@host:port
+NO_PROXY=localhost,127.0.0.1
+
 # ─── Model Parameters ─────────────────────────────────
 OLLAMA_TEMPERATURE=0.3
 OLLAMA_CONTEXT_SIZE=32768
