--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,25 @@ Thumbs.db
 # Visualizer
 src/cli/visualizer/node_modules/
 src/cli/visualizer/dist/
+src/cli/visualizer/.env
 
 # Expert Hardening
 panic_state.json
 .langfuse_data/
+
+# Benchmarks and Reports
+benchmark_results/
+benchmark_final_hardened_results.txt
+benchmark_final_production_results.txt
+benchmark_final_hardened.py
+benchmark_final_production.py
+walkthrough_v2.md.tmp
+
+# Tests and Verification Scripts
+src/tests/
+test_*.py
+verify_*.py
+check_*.py
+mock_*.py
+log.md.mdzod-validat
+test_gcc_logs_isolated/
