codebase clean up

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
 # ─── Ollama Configuration ─────────────────────────────
 OLLAMA_HOST=http://localhost:11434
-OLLAMA_MODEL=devstral:24b
+OLLAMA_MODEL=kimi-k2.5:cloud
+EMBEDDING_MODEL=llama3.2:3b
 
 # --- FastPath (Reflex) Configuration ---
-# Set FAST_PATH_ENABLED=false to force use of the main OLLAMA_MODEL for all turns (Save VRAM).
 FAST_PATH_ENABLED=true
 FAST_PATH_MODEL=llama3.2:3b
 FAST_PATH_HOST=http://localhost:11434
 USE_PROXY=false
-HTTP_PROXY=http://user:password@host:port
-HTTPS_PROXY=http://user:password@host:port
-NO_PROXY=localhost,127.0.0.1
+HTTP_PROXY=http://test1:Tes%4012345@10.20.1.222:3128
+HTTPS_PROXY=http://test1:Tes%4012345@10.20.1.222:3128
+NO_PROXY=localhost,127.0.0.1,10.20.1.222
 
 # ─── Model Parameters ─────────────────────────────────
 OLLAMA_TEMPERATURE=0.3
@@ -23,7 +23,8 @@ GCC_BASE_PATH=./.GCC
 SKILLS_PATH=./skills
 LOG_LEVEL=INFO
 
-# ─── Observability (Langfuse - Local-First) ───────────
+# ─── Observability (Langfuse) ──────────────────────────
+# Start local stack: docker-compose -f docker-compose.langfuse.yml up -d
 LANGFUSE_PUBLIC_KEY=pk-lf-...
 LANGFUSE_SECRET_KEY=sk-lf-...
 LANGFUSE_HOST=http://localhost:3000
